# lohi-trade

./: .env.research  .env.research.template  .env.template  .gitignore  .pre-commit-config.yaml  AUDIT_COMPLETE.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NVIDIA_NIM_INTEGRATION.md  OSS_AUDIT.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  build_prompt.txt  design_document.txt  docker-compose.research.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  start-research.sh  start.sh  test_nvidia_nim.py  test_nvidia_nim_openai.py  test_results.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  deploy.yml  docs.yml  lint.yml  release.yml  security.yml  tests.yml
Lohi-TRADE Web App Design/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
Lohi-TRADE Web App Design/src/: App.tsx  index.css  main.tsx
backend-gateway/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  auth_data.db  requirements.txt
backend-gateway/alembic/: env.py
backend-gateway/app/: config.py  main.py  websocket.py
backend-gateway/data/: users.json
backend-gateway/scripts/: bulk_classify_sectors.py  nubra_setup_totp.py  nubra_ticker.py  seed_nse_universe.py  seed_stocks.py
backend-gateway/tests/: __init__.py  conftest.py  test_account_service.py  test_auth_v2_router.py  test_bank_router.py  test_bank_service.py  test_broker_v2_router.py  test_chart_generator.py  test_chatbot_router.py  test_chatbot_service.py  test_dmat_service.py  test_fund_service.py  test_gateway_wiring.py  test_integration_flows.py  test_kyc_service.py  test_market_data_router.py  test_onboarding_endpoint.py  test_performance_optimizations.py  test_prop_auth.py  test_prop_dmat_format.py  test_prop_fund_management.py  test_prop_numeric_accuracy.py  test_prop_pan_format.py  test_prop_pan_masking.py  test_prop_rate_limit.py  test_prop_screener_filter.py  test_prop_serialization_roundtrip.py  test_prop_stock_search.py  test_prop_watchlist_limits.py  test_rate_limiter.py  test_rbac.py  test_research_errors.py  test_research_router.py  test_research_service.py  test_research_websocket.py  test_screener_router.py  test_screener_service.py  test_sector_service.py  test_security_middleware.py  test_serialization.py  (+8 more)
config/: keywords.json  settings.yaml.template
data/: service_registry.json
data/market_cache/: BHARTIARTL_1m.parquet  HDFCBANK_1m.parquet  HINDUNILVR_1m.parquet  ICICIBANK_1m.parquet  INFY_1m.parquet  ITC_1m.parquet  RELIANCE_1m.parquet  SBIN_1m.parquet  TCS_1m.parquet
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BACKTESTING.md  CONFIGURATION.md  FAQ.md  MULTI_COUNTRY.md  REDIS_SETUP.md  STRATEGIES.md  UNTESTED_MODULES_ISSUES.md
docs/research/: PROVIDERS.md  REFUSAL_POLICY.md  TRACEABILITY_AUDIT.md
examples/: logging_example.py
infra/: app.py  cdk.json
infra/cdk.out/: LoHiTradeCdn.assets.json  LoHiTradeCdn.metadata.json  LoHiTradeCdn.template.json  LoHiTradeData.assets.json  LoHiTradeData.metadata.json  LoHiTradeData.template.json  LoHiTradeEcs.assets.json  LoHiTradeEcs.metadata.json  LoHiTradeEcs.template.json  LoHiTradeMonitoring.assets.json  LoHiTradeMonitoring.metadata.json  LoHiTradeMonitoring.template.json  LoHiTradeVpc.assets.json  LoHiTradeVpc.metadata.json  LoHiTradeVpc.template.json  cdk.out  manifest.json  tree.json
infra/stacks/: __init__.py  cdn_stack.py  data_stack.py  ecs_stack.py  monitoring_stack.py  vpc_stack.py
infra/tests/: __init__.py  test_cdn_stack.py  test_data_stack.py  test_ecs_stack.py  test_monitoring_stack.py  test_vpc_stack.py
logs/: .lohi-pids  TONIGHT_RUN.md
migrations/: 006_research_ideas.sql
scripts/: check_prereqs.sh  convert_finbert_onnx.py  diagnose.py  generate_ticker_map.py  migrate_sqlite_to_postgres.py  paper_simulation.py  run_all_tests.py  seed_demo_data.py  shutdown.py  startup.py  verify_data_ingestion.py  verify_infrastructure.py  verify_technical_pipeline.py
src/: __init__.py
src/backtesting/: __init__.py  backtesting_engine.py
src/cli/: __init__.py  console.py  main.py  system.py
src/commander/: bias_calculator.py  bias_scheduler.py  entity_resolver.py  news_deduplicator.py  news_publisher.py  rss_poller.py  sentiment_analyzer.py
src/data/: __init__.py  historical_data.py
src/execution/: kill_switch.py  oms.py  paper_trading.py  position_manager.py  position_sizer.py  rms.py
src/ingestion/: angelone_broker.py  broker_interface.py  broker_manager.py  broker_router.py  corporate_actions_collector.py  groww_broker.py  historical_data_service.py  instrument_master.py  kite_broker.py  market_data_collector.py  market_data_wiring.py  shoonya_broker.py  ticker_mapper.py  websocket_client.py
src/markets/: __init__.py  market_profile.py  market_registry.py  tax_engine.py  tax_profile_generator.py
src/ml/: __init__.py  feature_engine.py  market_predictor.py  ml_strategy.py  model_trainer.py
tests/: test_backtesting_engine.py  test_bias_calculator.py  test_bias_scheduler.py  test_broker_interface.py  test_broker_manager.py  test_broker_router.py  test_candle_builder.py  test_candle_publisher.py  test_config.py  test_corporate_actions_collector.py  test_database.py  test_entity_resolver.py  test_event_bus.py  test_feature_engine.py  test_groww_broker.py  test_historical_data.py  test_historical_data_service.py  test_indicator_completeness.py  test_indicator_engine.py  test_indicator_error_handling.py  test_indicator_insufficient_data.py  test_indicator_publisher.py  test_indicator_symbol_isolation.py  test_instrument_master.py  test_integration_redis.py  test_integration_wizard_flow.py  test_kill_switch.py  test_kite_broker.py  test_logger.py  test_market_data_collector.py  test_market_data_wiring.py  test_market_predictor.py  test_mean_reversion_strategy.py  test_ml_strategy.py  test_model_trainer.py  test_news_deduplicator.py  test_news_publisher.py  test_oms.py  test_orb_strategy.py  test_order_book_depth.py  (+58 more)
(+719 files in other folders)
