[project]
name = "lohi-trade"
version = "0.1.0"
description = "Event-Driven Hybrid Algorithmic Trading System for Indian Equity Markets"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["trading", "algorithmic-trading", "indian-markets", "nse", "bse", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.3",
    "bcrypt>=4.0.0",
    "cryptography>=43.0.0",
    "duckdb>=0.10.0",
    "feedparser>=6.0.11",
    "fastapi>=0.115.0",
    "hiredis>=2.3.2",
    "httpx>=0.27.0",
    "httptools>=0.6.0",
    "lxml>=5.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.19.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.8.0",
    "pyotp>=2.9.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.22",
    "python-socketio>=5.11.0",
    "psycopg2-binary>=2.9.0",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.6.1",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.1.0",
    "ta-lib>=0.4.28",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.19.0; sys_platform != \"win32\"",
    "websocket-client>=1.7.0",
    "websockets>=12.0",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
research = [
    "openai>=1.50.0",
    "anthropic>=0.38.0",
    "groq>=0.9.0",
    "sentence-transformers>=3.1.0",
    "chromadb>=0.5.0",
    "qdrant-client>=2.11.0",
    "lancedb>=0.15.0",
    "llama-index>=0.10.0",
    "pydantic-ai>=0.1.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "onnxruntime>=1.17.0",
    "pandas-ta>=0.3.0",
    "sentencepiece>=0.1.99",
    "spacy>=3.7.2",
]
backtesting = [
    "vectorbt>=0.26.0",
]
dashboard = [
    "streamlit>=1.31.0",
]
nubra = [
    "nubra-sdk>=0.3.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "black>=24.1.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]
all = [
    "openai>=1.50.0",
    "anthropic>=0.38.0",
    "groq>=0.9.0",
    "sentence-transformers>=3.1.0",
    "chromadb>=0.5.0",
    "qdrant-client>=2.11.0",
    "lancedb>=0.15.0",
    "llama-index>=0.10.0",
    "pydantic-ai>=0.1.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "onnxruntime>=1.17.0",
    "pandas-ta>=0.3.0",
    "sentencepiece>=0.1.99",
    "spacy>=3.7.2",
    "vectorbt>=0.26.0",
    "streamlit>=1.31.0",
    "nubra-sdk>=0.3.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "black>=24.1.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
lohi = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/AdhirU/Lohi-Trade-OpenSource"
Repository = "https://github.com/AdhirU/Lohi-Trade-OpenSource"
Issues = "https://github.com/AdhirU/Lohi-Trade-OpenSource/issues"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --ignore=tests/research"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F841", "E741"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Start permissive; tighten progressively as modules get annotated.
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "tools/",
    "mobile/",
    "data/",
    "lohi_trade_venv/",
]

# Strict overrides for fully-annotated modules:
[[tool.mypy.overrides]]
module = "src.cli.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "src.research.providers.*"
disallow_untyped_defs = true
